# bmad-ecosystem

./: CMakeLists.txt  README.txt
bmad/: CMakeLists.txt
bsim/: CMakeLists.txt
bsim/aperture_by_tracking/: CMakeLists.txt
bsim/bbu/: CMakeLists.txt
bsim/dark_current_tracker/: CMakeLists.txt
bsim/dynamic_aperture/: CMakeLists.txt
bsim/e_cooling/: CMakeLists.txt
bsim/envelope_ibs/: CMakeLists.txt
bsim/frequency_map/: CMakeLists.txt
bsim/ibs_linac/: CMakeLists.txt
bsim/touschek_background/: CMakeLists.txt
code_examples/: CMakeLists.txt
code_examples/beam_track_example/: CMakeLists.txt
code_examples/bmad_to_opal_example/: CMakeLists.txt
code_examples/construct_taylor_map/: CMakeLists.txt
code_examples/csr_example/: CMakeLists.txt
code_examples/dispersion_simulation/: CMakeLists.txt
code_examples/em_field_query_example/: CMakeLists.txt
code_examples/lapack_examples/: CMakeLists.txt
code_examples/lattice_geometry_example/: CMakeLists.txt
code_examples/mpi_mp/: CMakeLists.txt
code_examples/multi_turn_tracking_example/: CMakeLists.txt
code_examples/particle_track_example/: CMakeLists.txt
code_examples/plot_example/: CMakeLists.txt
code_examples/ptc_layout_example/: CMakeLists.txt
code_examples/ptc_spin_orbital_normal_form/: CMakeLists.txt
code_examples/simple_bmad_program/: CMakeLists.txt
code_examples/spin_amplitude_dependent_tune/: CMakeLists.txt
code_examples/spin_matching/: CMakeLists.txt
cpp_bmad_interface/: CMakeLists.txt
cpp_bmad_interface/cpp_bmad_interface_test/: CMakeLists.txt
forest/: CMakeLists.txt
lux/: CMakeLists.txt
lux/lux/: CMakeLists.txt
regression_tests/: CMakeLists.txt  conftest.py
regression_tests/abs_time_test/: CMakeLists.txt
regression_tests/analysis_test/: CMakeLists.txt
regression_tests/aperture_test/: CMakeLists.txt
regression_tests/autoscale_test/: CMakeLists.txt
regression_tests/backwards_time_track_test/: CMakeLists.txt
regression_tests/bbu_test/: CMakeLists.txt
regression_tests/beam_test/: CMakeLists.txt
regression_tests/bend_test/: CMakeLists.txt
regression_tests/bookkeeper_test/: CMakeLists.txt
regression_tests/cathode_sc_test/: CMakeLists.txt
regression_tests/cesr_test/: CMakeLists.txt
regression_tests/closed_orbit_test/: CMakeLists.txt
regression_tests/coord_test/: CMakeLists.txt
regression_tests/csr_and_space_charge_test/: CMakeLists.txt
regression_tests/em_field_test/: CMakeLists.txt
regression_tests/field_test/: CMakeLists.txt
regression_tests/fixer_test/: CMakeLists.txt
regression_tests/fringe_test/: CMakeLists.txt
regression_tests/geometry_test/: CMakeLists.txt
regression_tests/girder_test/: CMakeLists.txt
regression_tests/hdf5_test/: CMakeLists.txt
regression_tests/mad_to_bmad_test/: CMakeLists.txt
regression_tests/mat6_calc_method_test/: CMakeLists.txt
regression_tests/match_test/: CMakeLists.txt
regression_tests/mode3_test/: CMakeLists.txt
regression_tests/mode_flip_test/: CMakeLists.txt
regression_tests/multipass_test/: CMakeLists.txt
regression_tests/multipole_test/: CMakeLists.txt
regression_tests/nonlin_test/: CMakeLists.txt
regression_tests/object_test/: CMakeLists.txt
regression_tests/parse_test/: CMakeLists.txt
regression_tests/particle_species_test/: CMakeLists.txt
regression_tests/patch_test/: CMakeLists.txt
regression_tests/photon_test/: CMakeLists.txt
regression_tests/ptc_test/: CMakeLists.txt
regression_tests/radiation_test/: CMakeLists.txt
regression_tests/reverse_test/: CMakeLists.txt
regression_tests/rf_test/: CMakeLists.txt
regression_tests/sad_test/: CMakeLists.txt  sad_test.f90  sad_to_bmad_bmad.params  sad_to_bmad_ptc.params
regression_tests/scripts/: run_tests.py
regression_tests/sim_utils_test/: CMakeLists.txt
regression_tests/slice_test/: CMakeLists.txt
regression_tests/space_charge_test/: CMakeLists.txt
regression_tests/spin_general_test/: CMakeLists.txt
regression_tests/spin_map_test/: CMakeLists.txt
regression_tests/superimpose_test/: CMakeLists.txt
regression_tests/synrad3d_test/: CMakeLists.txt
regression_tests/taylor_test/: CMakeLists.txt
regression_tests/time_runge_kutta_test/: CMakeLists.txt
regression_tests/tracking_method_test/: CMakeLists.txt
regression_tests/twiss_test/: CMakeLists.txt
regression_tests/wake_test/: CMakeLists.txt
regression_tests/wall3d_test/: CMakeLists.txt
regression_tests/write_bmad_test/: CMakeLists.txt
regression_tests/write_foreign_test/: CMakeLists.txt
regression_tests/xraylib_test/: CMakeLists.txt
sim_utils/: CMakeLists.txt
tao/: CMakeLists.txt
tao/tao/: CMakeLists.txt
util_programs/: CMakeLists.txt  photon_surface_plot.CMakeLists.txt
util_programs/beam_file_translate_format/: CMakeLists.txt
util_programs/bmad_to_astra/: CMakeLists.txt
util_programs/bmad_to_blender/: CMakeLists.txt
util_programs/bmad_to_csrtrack/: CMakeLists.txt
util_programs/bmad_to_gpt/: CMakeLists.txt
util_programs/bmad_to_mad_sad_elegant/: CMakeLists.txt
util_programs/bmad_to_merlin/: CMakeLists.txt
util_programs/bmad_to_scibmad/: CMakeLists.txt
util_programs/bmad_to_slicktrack/: CMakeLists.txt
util_programs/cartesian_map_fit/: CMakeLists.txt
util_programs/compare_tracking_methods_plot/: CMakeLists.txt
util_programs/compare_tracking_methods_text/: CMakeLists.txt
util_programs/controller_response_plot/: CMakeLists.txt
util_programs/converter_fitter/: CMakeLists.txt
util_programs/converter_simulation/: CMakeLists.txt
util_programs/element_attributes/: CMakeLists.txt
util_programs/errors_mad_to_bmad/: CMakeLists.txt
util_programs/generalized_gradient_fit/: CMakeLists.txt
util_programs/lattice_cleaner/: CMakeLists.txt
util_programs/mais_ripken/: CMakeLists.txt
util_programs/photon_init_plot/: CMakeLists.txt
util_programs/photon_surface_data/: CMakeLists.txt
util_programs/ptc_profiler/: CMakeLists.txt
util_programs/ptc_to_bmad/: CMakeLists.txt
util_programs/sad_to_bmad_postprocess/: CMakeLists.txt
util_programs/wake_fit/: CMakeLists.txt
util_programs/wake_plot/: CMakeLists.txt
(+14 files in other folders)
